--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -5,4 +5,4 @@ kind: Kustomization
 images:
 - name: controller
   newName: quay.io/kurtmcalpine/valkey-cluster-operator
-  newTag: v0.0.4
+  newTag: test
