--- a/config/rbac/kustomization.yaml
+++ b/config/rbac/kustomization.yaml
@@ -22,6 +22,8 @@ resources:
 # default, aiding admins in cluster management. Those roles are
 # not used by the Project itself. You can comment the following lines
 # if you do not want those helpers be installed with your Project.
+- valkeycluster_editor_role.yaml
+- valkeycluster_viewer_role.yaml
 - memcached_editor_role.yaml
 - memcached_viewer_role.yaml
 
