--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,4 +1,5 @@
 ## Append samples of your project ##
 resources:
 - cache_v1alpha1_memcached.yaml
+- cache_v1alpha1_valkeycluster.yaml
 # +kubebuilder:scaffold:manifestskustomizesamples
